--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.0",
     "express": "^5.1.0",
     "firebase-admin": "^13.5.0",
     "node-cron": "^4.2.1",
